--- a/app/src/main/res/layout/activity_take_phote.xml
+++ b/app/src/main/res/layout/activity_take_phote.xml
@@ -1,17 +1,55 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/root_layout"
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    tools:ignore="MissingDefaultResource">
+
+
+    <RelativeLayout
+        android:id="@+id/bottom_layout"
+        android:layout_width="match_parent"
+        android:layout_height="146dp"
+        android:layout_alignParentBottom="true"
+        android:background="#2B2F38"
+        android:padding="12dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="30dp"
+            android:onClick="close"
+            android:padding="20dp"
+            android:src="@mipmap/close_write_icon" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:onClick="close"
+            android:padding="20dp"
+            android:src="@mipmap/album_icon" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginEnd="30dp"
+            android:onClick="takePhoto"
+            android:padding="12dp"
+            android:src="@mipmap/photo_icon" />
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/take_photo_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@id/bottom_layout"
         android:visibility="visible">
-        <camerademo.camare.CameraPreview
+
+        <com.jeanboy.cropview.camare.CameraPreview
             android:id="@+id/cameraPreview"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
@@ -21,13 +59,14 @@
             android:layout_height="80dp"
             android:layout_centerInParent="true"
             android:background="@null"/>-->
-        <camerademo.camare.FocusView
+        <com.jeanboy.cropview.camare.FocusView
             android:id="@+id/view_focus"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true" />
         <!--网格参考线-->
-        <camerademo.camare.ReferenceLine
+        <com.jeanboy.cropview.camare.ReferenceLine
+            android:id="@+id/referenceLine"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
@@ -35,87 +74,27 @@
             android:id="@+id/hint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_centerInParent="true"
-            android:textColor="#45e0e0e0"
-            android:lineSpacingMultiplier="2.0"
-            android:text="请横屏拍照\n题目文字尽量与参考线对齐"/>
+            android:gravity="center"
+            android:lineSpacingMultiplier="1.5"
+            android:text="每次仅能搜一题\n平行纸面，文字对齐参考线"
+            android:textColor="#ffffff" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/flash_tv"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:padding="12dp">
-            <ImageView
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:padding="12dp"
-                android:src="@drawable/ic_close_selector"
-                android:layout_alignParentRight="true"
-                android:onClick="close"/>
-            <ImageView
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_centerInParent="true"
-                android:onClick="takePhoto"
-                android:padding="12dp"
-                android:src="@drawable/ic_takephoto_selector"/>
-        </RelativeLayout>
+            android:layout_centerHorizontal="true"
+            android:layout_marginEnd="20dp"
+            android:drawableTop="@mipmap/ling"
+            android:drawablePadding="6dp"
+            android:onClick="clickFlash"
+            android:padding="30dp"
+            android:text="轻触点亮"
+            android:textColor="#ffffff" />
 
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/cropper_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="#000000"
-        android:visibility="gone">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
-            <camerademo.cropper.CropImageView
-                android:id="@+id/CropImageView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center" />
-            <TextView
-                android:id="@+id/crop_hint"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:textColor="#45ffffff"
-                android:layout_marginBottom="8dp"
-                android:text="一次只能提交一道题"/>
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="12dp">
-            <ImageView
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:padding="12dp"
-                android:src="@drawable/ic_close_selector"
-                android:onClick="closeCropper"/>
-            <ImageView
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_alignParentRight="true"
-                android:onClick="startCropper"
-                android:padding="12dp"
-                android:src="@drawable/ic_ok_selector"/>
-        </RelativeLayout>
-    </LinearLayout>
-
-    <!--<ImageView
-        android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:background="#ff0000"
-        android:scaleType="fitXY"
-        android:visibility="gone"/>-->
 
 </RelativeLayout>
